⚔ “Knights and Flowers” 1.0.2 🌼

✦Fixes:
✢ Stalliongrad palace construction fixed
✢ Flavour Decisions to Brodfeld
✢ Cosmetic tag for Arcturian Order when it becomes a kingdom
✢ Formable Socialist Union and Socialist Republic of Equestria
✢ Formable Prywhen
✢ Formable Yak Empire
✢ Fixed Griffon Liberation Army and Brodfeld puppeting each other
✢ Fixes to Griffon Liberation Army AI
✢ Fixes November 28th, 1007 crash for no-TfV players
✢ Fixed other Crashes to Desktop
✢ Fixed Dread League supply consumption
✢ Fixed Dread League can be released after annexation
✢ Fixed localisation
✢ Fixed russian localisation
✢ Other small bugfixes, additions and improvements

⚔ “Knights and Flowers” 1.0.1 🌼

✦Fixes:
✢ Infantry Equipment upgrades were brought back
✢ Sombra has 70 days to finish the civil war, before Equestria declares war on him
✢ Fixes to Olenia-Thorax relationships
✢ Fixes to Thorax focus tree and events
✢ Fixes to Solar Empire triggers
✢ Balancing to Solar Empire, Griffonian Republic and Lunar Empire
✢ More focus icons
✢ Fixed localisation
✢ Topbar background is fixed
✢ Duplicates removed
✢ Flavour Decisions in Griffon Liberation Army
✢ Some memes removed
✢ Other bugfixes and improvements

⚔ “Knights and Flowers” 1.0 🌼
Changelog:
Features:
✦﻿The Griffon Continent is here!

❈ Countries with focus trees:
✢ Griffon Empire
✢ Wingbardy
✢ Aquilea
✢ Skyfall Trade Federation
✢ Griffon Republic
✢ Griffon Liberation Army
✢ Blackrock Bandits
✢ Dread League
✢ Rumare
✢ Greifwald
✢ Brodfeld
✢ Holy Order
✢ Nyumba ya Kaskazini

Various choices, not enough griffon portraits and more land to conquer

✦Equestria sweet home

❈ Countries with focus trees:
✢ Solar Empire
✢ Celestial State
✢ Democratic path for Equestria
✢ Harmonic Thorax's Changeling path
✢ Rearranged Changeling focuses
✢ Lunar Empire focus tree improved
✢ Penguins
✢ Yakyakistan reworked
✢ Buffalo Chiefdom

❈ Changes to Equestrian continent:
✢ Numerous changes to coastline to make it fatter and more realistic