@@ -386,6 +386,41 @@ GRW_internal_affairs = {
 			set_capital = 385
 		}
 	}
+	GRW_rename_kivessin_to_redgladin = {
+		icon = red_star
+		available = {
+			has_war = no
+			owns_state = 508
+			custom_trigger_tooltip = {
+				tooltip = redglad_is_dead
+				OR = {
+					has_country_flag = company_lost_in_passage_redglad_ded
+					has_country_flag = passage_gets_destroyed_redglad_ded
+				}
+			}
+		}
+		cost = 15
+		ai_will_do = {
+			factor = 100
+		}
+		fire_only_once = yes
+		is_good = yes
+		visible = {
+			has_war = no
+			owns_state = 508
+			custom_trigger_tooltip = {
+				tooltip = redglad_is_dead
+				OR = {
+					has_country_flag = company_lost_in_passage_redglad_ded
+					has_country_flag = passage_gets_destroyed_redglad_ded
+				}
+			}
+		}
+		complete_effect = {
+			add_political_power = 15
+			set_province_name = { id = 10377 name = "Redgladin"}
+		}
+	}
 	GRW_move_capital_Kivessin = {
 		icon = generic_decision
 		available = {
