@@ -1565,7 +1565,8 @@ focus_tree = {
 		icon = GFX_idea_modern_society
 		cost = 10.00
 		prerequisite = {
-			focus = GRW_military_youth
+			focus = GRW_crush_the_oligarchs
+			focus = GRW_free_schooling
 		}
 		x = 20
 		y = 16
