@@ -1470,6 +1470,7 @@ country_event = {
 		remove_ideas = GRW_famine_start
 	}
 }
+
 country_event = {
 	id = prywhen.46
 	hidden = yes
@@ -1506,6 +1507,232 @@ country_event = {
 		drop_cosmetic_tag = yes
 	}
 }
+
+country_event = {
+	id = prywhen.48
+	title = prywhen.48.t
+	desc = prywhen.48.d
+	picture = GFX_event_griffon_mountain
+
+	trigger = {
+		tag = GRW
+		has_country_flag = {
+			flag = monarchist_repressions value > 3
+		}
+		NOT = {
+			385 = { is_controlled_by = GRW }
+		}
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 14
+	}
+	option = { ## accept
+		name = prywhen.48.a
+		ai_chance = {
+			factor = 1
+		}
+		hidden_effect = {
+			random_list = {
+				50 = {
+					set_country_flag = make_it_through_passage
+				}
+				30 = {
+					set_country_flag = passage_gets_destroyed
+				}
+				20 = {
+					set_country_flag = company_lost_in_passage
+				}
+			}
+		}
+	}
+	option = { ## accept and lead
+		name = prywhen.48.b
+		ai_chance = {
+			factor = 1
+			modifier = {
+				is_historical_focus_on = yes
+				factor = 0
+			}
+		}
+		add_political_power = 25
+		hidden_effect = {
+			random_list = {
+				50 = {
+					set_country_flag = make_it_through_passage
+				}
+				30 = {
+					set_country_flag = passage_gets_destroyed_redglad_ded
+				}
+				20 = {
+					set_country_flag = company_lost_in_passage_redglad_ded
+				}
+			}
+		}
+	}
+	option = { ## don't accept
+		name = prywhen.48.c
+		ai_chance = {
+			factor = 1
+		}
+	}
+	option = { ## shoot the bastard
+		name = prywhen.48.e
+		ai_chance = {
+			factor = 0
+		}
+	}
+}
+country_event = {
+	id = prywhen.49
+	title = prywhen.49.t
+	desc = prywhen.49.d
+	picture = GFX_event_griffon_mountain
+
+	trigger = {
+		tag = GRW
+		has_country_flag = make_it_through_passage
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 7
+	}
+	option = { ## accept
+		name = prywhen.49.a
+		hidden_effect = {
+			load_oob = "GRW_sydia_passage"
+		}
+	}
+}
+country_event = {
+	id = prywhen.50
+	title = prywhen.50.t
+	desc = prywhen.50.d
+	picture = GFX_event_griffon_mountain
+
+	trigger = {
+		tag = GRW
+		has_country_flag = passage_gets_destroyed
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 5
+	}
+	option = { ## accept
+		name = prywhen.50.a
+		add_manpower = -1000
+	}
+	option = { ## accept
+		name = prywhen.50.b
+		add_manpower = -750
+		add_political_power = -20
+	}
+}
+country_event = {
+	id = prywhen.51
+	title = prywhen.51.t
+	desc = prywhen.51.d
+	picture = GFX_event_griffon_mountain
+
+	trigger = {
+		tag = GRW
+		has_country_flag = company_lost_in_passage
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 14
+	}
+	option = { ## accept
+		name = prywhen.51.a
+		add_manpower = -1000
+	}
+}
+country_event = {
+	id = prywhen.52
+	title = prywhen.52.t
+	desc = prywhen.52.d
+	picture = GFX_event_griffon_mountain
+
+	trigger = {
+		tag = GRW
+		has_country_flag = company_lost_in_passage_redglad_ded
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 14
+	}
+	option = { ## accept
+		name = prywhen.52.a
+		add_manpower = -1000
+		kill_country_leader = yes
+		create_country_leader = {
+			name = "Richard Spear"
+			picture = "RichardSpear.tga"
+			expire = "1965.1.1"
+			ideology = leninism
+			traits = { }
+		}
+		if = {
+			limit = {
+				has_unit_leader = 50
+			}
+			remove_unit_leader = 50
+		}
+	}
+}
+country_event = {
+	id = prywhen.53
+	title = prywhen.53.t
+	desc = prywhen.53.d
+	picture = GFX_event_griffon_mountain
+
+	trigger = {
+		tag = GRW
+		has_country_flag = passage_gets_destroyed_redglad_ded
+	}
+	fire_only_once = yes
+	mean_time_to_happen = {
+		days = 5
+	}
+	option = { ## accept
+		name = prywhen.53.a
+		add_manpower = -1000
+		kill_country_leader = yes
+		create_country_leader = {
+			name = "Richard Spear"
+			picture = "RichardSpear.tga"
+			expire = "1965.1.1"
+			ideology = leninism
+			traits = { }
+		}
+		if = {
+			limit = {
+				has_unit_leader = 50
+			}
+			remove_unit_leader = 50
+		}
+	}
+	option = { ## accept
+		name = prywhen.53.b
+		add_manpower = -750
+		add_political_power = -25
+		kill_country_leader = yes
+		create_country_leader = {
+			name = "Richard Spear"
+			picture = "RichardSpear.tga"
+			expire = "1965.1.1"
+			ideology = leninism
+			traits = { }
+		}
+		if = {
+			limit = {
+				has_unit_leader = 50
+			}
+			remove_unit_leader = 50
+		}
+	}
+}
+
 ####################################################
 ########## BRODFELD ################################
 ####################################################
