@@ -3279,3 +3279,128 @@ country_event = {
 		add_stability = 0.01
 	}
 }
+
+country_event = {
+	id = stalliongrad.138
+	title = stalliongrad.138.t
+	desc = {
+		text = stalliongrad.138.d
+		trigger = {
+			has_war = yes
+		}
+	}
+	desc = {
+		text = stalliongrad.138.d_no_war
+		trigger = {
+			has_war = no
+		}
+	}
+	picture = GFX_event_stg_pairlament2
+
+	trigger = {
+		tag = STG
+		has_offensive_war_with = GRF
+		has_offensive_war_with = EQS
+		has_country_leader = { ruling_only = yes name = "Sinister Serov" }
+	}
+	immediate = {
+		if = {
+			limit = {
+				has_country_flag = ponies_disappointed_in_war
+			}
+			modify_country_flag = {
+				flag = ponies_disappointed_in_war value = 2
+			}
+		}
+	}
+	mean_time_to_happen = {
+		days = 150
+		modifier = {
+			factor = 4
+			has_idea = volunteer_only
+		}
+		modifier = {
+			factor = 3
+			has_idea = limited_conscription
+		}
+		modifier = {
+			factor = 2
+			has_idea = extensive_conscription
+		}
+		modifier = {
+			factor = 1
+			has_idea = service_by_requirement
+		}
+		modifier = {
+			factor = 0.5
+			has_idea = all_adults_serve
+		}
+		modifier = {
+			factor = 0.3
+			has_idea = scraping_the_barrel
+		}
+	}
+	option = {
+		name = stalliongrad.138.a
+		if = {
+			limit = {
+				has_country_flag = {
+					flag = ponies_disappointed_in_war value > 10
+				}
+				
+			}
+			add_stability = -0.08
+				add_war_support = -0.08
+		}
+		else_if = {
+			limit = {
+				has_country_flag = {
+					flag = ponies_disappointed_in_war value > 8
+				}
+				
+			}
+			add_stability = -0.07
+				add_war_support = -0.07
+		}
+		else_if = {
+			limit = {
+				has_country_flag = {
+					flag = ponies_disappointed_in_war value > 5
+				}
+				
+			}
+			add_stability = -0.05
+				add_war_support = -0.05
+		}
+		else_if = {
+			limit = {
+				has_country_flag = {
+					flag = ponies_disappointed_in_war value > 3
+				}
+				
+			}
+			add_stability = -0.025
+				add_war_support = -0.025
+		}
+		else_if = {
+			limit = {
+				has_country_flag = {
+					flag = ponies_disappointed_in_war value > 0
+				}
+			}
+			has_country_flag = ponies_disappointed_in_war
+			add_stability = -0.015
+			add_war_support = -0.015
+		}
+		else_if = {
+			limit = {
+				NOT = {
+					has_country_flag = ponies_disappointed_in_war
+				}
+			}
+			add_stability = -0.005
+			add_war_support = -0.005
+			set_country_flag = ponies_disappointed_in_war
+		}
+	}
+}
