@@ -112,6 +112,7 @@ create_corps_commander = {
 	defense_skill = 2
 	planning_skill = 1
 	logistics_skill = 1
+	id = 50
 }
 create_corps_commander = {
 	name = "Theresa"
