@@ -1,0 +1,18 @@
+﻿division_template = {
+	name = "Saboteurs"			#Infantry Division - kek
+	
+	regiments = {
+		infantry = { x = 0 y = 0 }
+	}
+	
+	support = {
+	}
+}
+units = {
+	division = {
+		name = "Saboteurs"
+		location = 7670
+		division_template = "Saboteurs"
+		start_experience_factor = 0.6
+		start_equipment_factor = 0.9 }
+}
