@@ -1018,3 +1018,37 @@ has_set_capital_in_Kivessin:0 "Has previously set capital in Kivessin"
 GRW_transformation_to_modern_society:0 "To the Future!"
 GRW_to_modern_society:0 "Transformation to Modern Society"
 GRW_to_modern_society_1:0 "Transformation to Modern Society"
+GRW_modernization_focus:0 "Modernization"
+
+prywhen.48.t:0 "A captured royalist"
+prywhen.48.d:0 "In one of our raids on monarchists houses, our soldiers captured a drunk merchant who was willing to cooperate with us in a way. He offered our negociator to lead a brigade of our soldiers through a passage underground, which leads all the way to Sydia port. He said that his father used the tunnel to transfer rice and wine from the fields he owned without paying taxes to the king.\nThe drunkard agreed to lead our company through the passages. He says they are like second home for him\n\nThis sounds like a lovely possibility to take the Sydia port past the enemy lines! However, what if the bastard lies?"
+prywhen.48.a:0 "This is a fine idea."
+prywhen.48.b:0 "Great, Redglad will lead the charge!"
+prywhen.48.c:0 "Throw this guy into a mud puddle."
+prywhen.48.e:0 "Shoot the idiot."
+
+prywhen.49.t:0 "Sydia Port!"
+prywhen.49.d:0 "Our group of saboteurs successfully made their way through the tunnel to Sydia port. They came out of the docks at night and switftly started their advance through the city. The operation can be concluded successful. We have to put all efforts to support the troops in the enemy territory now."
+prywhen.49.a:0 "That's good, right."
+
+prywhen.50.t:0 "The passage is blocked"
+prywhen.50.d:0 "Our group of saboteurs found themselves trapped in the passage as the ceiling exloded. Someone planned this from the beginning. Many of our soldiers died under the rubble and others have no way out."
+prywhen.50.a:0 "That bastard tricked us!"
+prywhen.50.b:0 "Can we rescure them?"
+
+prywhen.51.t:0 "The company is lost!"
+prywhen.51.d:0 "Our group of saboteurs is lost in the tunnel. Apparently, there is a whole labyrinth of passages and tunnels under the ground. Something happened, the group made a wrong turn or the drunkard tricked them. Our brave griffon can't find the way out!"
+prywhen.51.a:0 "Curse him!"
+
+prywhen.52.t:0 "The company is lost!"
+prywhen.52.d:0 "Our group of saboteurs is lost in the tunnel, and with them Comrade-General Redglad. Apparently, there is a whole labyrinth of passages and tunnels under the ground. Something happened, the group made a wrong turn or the drunkard tricked them. Our brave griffon can't find the way out!"
+prywhen.52.a:0 "Curse him!"
+
+prywhen.53.t:0 "The passage is blocked"
+prywhen.53.d:0 "Our group of saboteurs found themselves trapped in the passage as the ceiling exloded. Someone planned this from the beginning. Many of our soldiers died under the rubble including Comrade-General Redglad as he led the way and was the first to be struck, and others have no way out."
+prywhen.53.a:0 "That bastard tricked us!"
+prywhen.53.b:0 "Can we rescure them?"
+
+GRW_rename_kivessin_to_redgladin:0 "Rename Kivessin to Redgladin"
+GRW_rename_kivessin_to_redgladin_desc:0 "Comrade Redglad has fallen vicitim to the bloody civil war that brought sorrow to many families. But he was the one, who inspired us, who led us to the end. Let us commemorate the name of Redglad. The city of Kivessin is to be renamed to Redgladin!"
+redglad_is_dead:0 "Redglad is dead"
