@@ -791,3 +791,8 @@ STG_sinister_speech_offensive_generic:0 "Sinister speaks for liberation of [From
 stalliongrad.137.t:0 "Achievement Unlocked!"
 stalliongrad.137.d:0 "You found Chernushka, playing a chernushka!"
 stalliongrad.137.a:0 "Oh!"
+
+stalliongrad.138.t:0 "The Ponies are dissapointed with war."
+stalliongrad.138.d:0 "The war against Nova Griffonia and Equestria takes lives of many ponies who leave their home in the name of... Why do they leave their homes? To conquer the neighbours, to satisfy Sinister's ambitions? Everything seems pointless."
+stalliongrad.138.d_no_war:0 "The war against Nova Griffonia and Equestria took lives of many ponies who left their home in the name of... Why did they leave their homes? To conquer the neighbours, to satisfy Sinister's ambitions? Everything just seems pointless"
+stalliongrad.138.a:0 "Don't give up now!"
