@@ -18,4 +18,4 @@
  AET_GATHERING_STORM_DESC:0 "The County of Greifwald has for long been a nation that has mastered the art of balancing between many powers on the griffin continent, as it's located directly in the middle between the Kingdom of Aquellia and The Griffonian Empire. The current establishment of Greifwald has ruled for long already, but the County is troubled by many problems. It's citizens are poor, it's army and industry greatly obsolete. And while the current regime tries it's best to keep everything stable, there exists a small but hardworking anarchistic party there, that could pose a great threat to the government. But more worryingly, there are whispers in the dark of Prelate Ebonwing's great ambitions and plans..."
  TRD_GATHERING_STORM_DESC:0 "The Skyfall Trade Federation is currently the odd-man out on the Griffonian continent, as in opposition to other countries in Griffonia, the Trade Federation has prospered while the Empire has been declining, and is prospering even now. Yet, even the Federation is plagued by few issues, deep class divide, the greatest organized strike in the entire Griffonian History. And Budget that is, frankly, a mess. But one of the most worrying problems Skyfall faces is the so called ''Woodpecker Society''. Entirely made up of wealthy and powerful griffons. The Trade Federation is currently standing at a crossroads, it's future might be a model for all of Griffonia, or... maybe a warning to all of Griffonia..."
  JER_GATHERING_STORM_DESC:0 "The Kingdom of Aquileia is one of the oldest nation on the Griffonian continent. It was around when the Empire was unified for the first time, and it was also one of the first nations who left it. But after that happened, Aquileia itself suffered a coup where it was transformed into a republic, but just like with the Empire, it didn't last. Yet, memories of the republic are not dead yet. And that isn't aren't the only problems Aquileia faces, as ever since Aquileia left the Empire, it has been a sort of Rival to it, and if the Empire would try to revitalize itself, Aquileia would be the first strong enemy that they would have to face. But would Aquileia be strong enough to face them?"
- GRW_GATHERING_STORM_DESC:0 "The Griffon Liberation Army movement was born in the Kingdom of Brodfeld, a brutal bourgeoisie tyranny. We managed to capture the popular support of peasants and workers in the north and in the west. And then, we rebelled against our bourgie overlords, this war may have been bloody and long, but the Tyrant from Kivessin is losing, and sooner or later, we will give him justice. And after that is done... There is a lot of work for us to do. We will need to educate all of our citizens, even with basic knowledge. After that... we will have to decide what to do with our foreign policy, should we just focus on doing the best with what we have here? Or export our revolution to every state around, willing or not?" 
+ GRW_GATHERING_STORM_DESC:0 "The Griffon Liberation Army movement was born in the Kingdom of Brodfeld. Sparked by brutality of the king the revolutionary spirit of the griffons of Prywhen inspired an organization of the resistance against the bourgeoise. It managed to capture the popular support of peasants and workers throughout the country. For two years a devastating civil war is going on, more charactarized by guerilla warfare and raids than a full-scale war. But now the peasants and the proletariat have picked themselves up to make the final push into the royalists' nest of vipers. From there on, Prywhen will finally have a chance to decide their own destiny.
