@@ -466,6 +466,9 @@ GRW_fascism_ADJ:0 "Бродфилдск."
 GRW_democratic_ADJ:0 "Бродфилдск."
 GRW_neutrality_ADJ:0 "Бродфилдск."
 GRW_communism_ADJ:0 "Грифонск."
+GRW_prywhen_communism:0 "Прайвен"
+GRW_prywhen_communism_DEF:0 "Прайвенская Республика"
+GRW_prywhen_communism_ADJ:0 "Прайвен"
 GRW_PRY_communism:0 "Революционная Республика Грифонии"
 GRW_PRY_communism_DEF:0 "Революционная Прайвенская Республика Грифонии"
 
