@@ -1,3 +1,9 @@
+⚔ “Knights and Flowers” 1.0.3 🌼
+
+✦Fixes:
+✢ Griffon Liberation Army can upgrade to modern society
+✢ No draft dodging, when there is no drafting
+
 ⚔ “Knights and Flowers” 1.0.2 🌼
 
 ✦Fixes:
